[tool.poetry]
name = "repl_python3_Discordmusicbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
PyNaCl = "^1.4.0"
termcolor = "^1.1.0"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
attrs = "^21.2.0"
cffi = "^1.14.6"
"discord.py" = "^1.7.3"
idna = "^3.2"
itsdangerous = "^2.0.1"
yarl = "^1.6.3"
Werkzeug = "^2.0.1"
pycparser = "^2.20"
multidict = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
